--- a/10.html
+++ b/10.html
@@ -2,13 +2,14 @@
 <html>
 <head>   
   
-<title>Main page</title>
+<title>App page</title>
  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
     
 <body>
     
    <div align='center'> <a href="/index.html">MAIN PAGE</a> </div> 
+	<div align='center'> <a >App PAGE</a> </div>
 	
    <div  class="block1"> <a href="/1.html" >1 page</a> </div>   <div  class="block2"> <a href="/2.html" >2 page</a> </div>   <div  class="block1"> <a href="/3.html" >3 page</a> </div>   <div  class="block2"> <a href="/4.html" >4 page</a> </div>   <div  class="block1"> <a href="/5.html" >5 page</a> </div>   <div  class="block2"> <a href="/6.html" >6 page</a> </div>   <div  class="block1"> <a href="/7.html" >7 page</a> </div>   <div  class="block2"> <a href="/8.html" >8 page</a> </div>   <div  class="block1"> <a href="/9.html" >9 page</a> </div>   <div  class="block2"> <a href="/10.html">10 page</a> </div>
 
@@ -16,6 +17,7 @@
 <p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p><p>Two</p><p>roads</p><p>diverged</p><p>in</p><p>a</p><p>yellow</p><p>wood</p><p>And</p>
 </div>
   
+<script async src="https://widget.13chats.com/assets/loader.js" data-chats-widget-id="17929ddb-a250-44de-9d4f-7956a6c2b9cd"></script>
 	
 </body>
 </html>
