--- a/1.html
+++ b/1.html
@@ -12,7 +12,7 @@
 	
    <div  class="block1"> <a href="/1.html" >1 page</a> </div>   <div  class="block2"> <a href="/2.html" >2 page</a> </div>   <div  class="block1"> <a href="/3.html" >3 page</a> </div>   <div  class="block2"> <a href="/4.html" >4 page</a> </div>   <div  class="block1"> <a href="/5.html" >5 page</a> </div>   <div  class="block2"> <a href="/6.html" >6 page</a> </div>   <div  class="block1"> <a href="/7.html" >7 page</a> </div>   <div  class="block2"> <a href="/8.html" >8 page</a> </div>   <div  class="block1"> <a href="/9.html" >9 page</a> </div>   <div  class="block2"> <a href="/10.html">10 page</a> </div>
 	
-	<script async src="https://dt68y4bse663f.cloudfront.net/assets/loader.js" data-chats-widget-id="03b1d3da-241e-470c-b400-cc0b02a450f9"></script>
+	<script async src="https://widget.13chats.com/assets/loader.js" data-chats-widget-id="f35e760a-b302-456f-b361-ef590c972ef4"></script>
 	
 </body>
 </html>
