--- a/1.html
+++ b/1.html
@@ -12,5 +12,7 @@
 	
    <div  class="block1"> <a href="/1.html" >1 page</a> </div>   <div  class="block2"> <a href="/2.html" >2 page</a> </div>   <div  class="block1"> <a href="/3.html" >3 page</a> </div>   <div  class="block2"> <a href="/4.html" >4 page</a> </div>   <div  class="block1"> <a href="/5.html" >5 page</a> </div>   <div  class="block2"> <a href="/6.html" >6 page</a> </div>   <div  class="block1"> <a href="/7.html" >7 page</a> </div>   <div  class="block2"> <a href="/8.html" >8 page</a> </div>   <div  class="block1"> <a href="/9.html" >9 page</a> </div>   <div  class="block2"> <a href="/10.html">10 page</a> </div>
 		
+<script async src="https://d3ppax5trsa9bf.cloudfront.net/assets/loader.js" data-chats-widget-id="66604682-e95b-46dd-9705-88dde0f345f0"></script>
+	
 </body>
 </html>
