--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WWPDKH6');</script>
 <!-- End Google Tag Manager -->
-	
+
+<script> !function (t, e, c, n) { var s = e.createElement(c); s.async = 1, s.src = 'https://scripts.claspo.io/scripts/' + n + '.js'; var r = e.scripts[0]; r.parentNode.insertBefore(s, r); var f = function () { f.c(arguments); }; f.q = []; f.c = function () { f.q.push(arguments); }; t['claspo'] = t['claspo'] || f; }(window, document, 'script', '9B3DCAE9FB4748A3929A143E80D5AE10'); </script><script>claspo('init');</script>
+
 <body>
     
 <!-- Google Tag Manager (noscript) -->
@@ -30,21 +32,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 	
 <script async src="https://pop-ups.sendpulse.com/assets/loader.js" data-chats-widget-id="d8ddbf55-4b4a-4c10-9dd4-89f2724189e5"></script>
-<script>
-    !function (t, e, c, n) {
-        var s = e.createElement(c);
-        s.async = 1, s.src = 'https://scripts.claspo.io/scripts/' + n + '.js';
-        var r = e.scripts[0];
-        r.parentNode.insertBefore(s, r);
-        var f = function () {
-            f.c(arguments);
-        };
-        f.q = [];
-        f.c = function () {
-            f.q.push(arguments);
-        };
-        t['claspo'] = t['claspo'] || f;
-    }(window, document, 'script', '9B3DCAE9FB4748A3929A143E80D5AE10');
-</script><script>claspo('init');</script>
+
 	
 </html>
